tests/expectations/compiler/constants/constant_loop_bound_type_mismatch_fail.out
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:7:22
     |
   7 |         for i: u8 in START..STOP {
     |                      ^^^^^
